test/syc/good/bor.c
/*
 * Bitwise OR
 */

int bor(int a, int b)
{
	return a | b;
}
