test/syc/bad/voidlastarg.c
/*
 * Void must be the last and only argument
 */

int foo(void, int a)
{
	return 0;
}
